# gofer

./: .env  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  schema.gql  schema.graphql  tsconfig.json
client/: index.html  package-lock.json  package.json
client/public/: index.html
client/src/: App.tsx  authUtils.ts  errors.ts  index.css  index.tsx  main.tsx  rights.ts  router.tsx  theme.ts
client/src/api/: api.ts  auth.ts  errors.ts  project.ts  task.ts  user.ts  userQueries.ts
client/src/components/: ActivityWidget.tsx  Page.tsx  Sidebar.tsx  Spacer.tsx
client/src/components/modals/: AddProject.tsx  AddTaskModal.tsx
client/src/contexts/: Auth.tsx  loggedInUserData.tsx
client/src/hooks/: useAPISubscription.ts  useGoToRoute.ts
client/src/pages/: Calendar.tsx  Dashboard.tsx  Login.tsx  Project.tsx  Projects.tsx  Roles.tsx  Settings.tsx  Tasks.tsx  Users.tsx
client/src/store/: store.ts
gofer/: __main__.py  schema.py
src/: config.rs  context.ts  database.rs  errors.ts  handlers.rs  index.ts  main.rs  main.ts  models.rs  pubsub.ts  resolvers.ts  schema.ts  utils.ts
src/handlers/: user.rs
src/models/: project.rs  project.ts  role.rs  role.ts  task.rs  task.ts  user.rs  user.ts
src/resolvers/: auth.ts  project.ts  role.ts  task.ts  user.ts
