[package]
name = "gofer"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
chrono = "0.4"
mongodb = "2"
serde_json = "1"
futures = "0.3"
warp = "0.3"

[dependencies.confy]
version = "0.5"
default-features = false
features = ["ron_conf"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.bson]
version = "2"
features = ["chrono-0_4"]